fix: [CDS-43327]: Logs support for InfrastructureTaskExecutableStepV2 (#37724)